--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
   <body>
     <h1>Reader</h1>
     <p>Enter text to increase readability.</p>
+      <form action="/action_page.php">
+        First name: <input type="text" name="fname"><br>
+        Last name: <input type="text" name="lname"><br>
+      <input type="submit" value="Submit">
+</form> 
   </body>
 </html>
