--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <h1>Reader</h1>
     <p>Enter text to increase readability.</p>
-    <form action="/action_page.php">
+    <form action="/reader/display_text.php">
         <input type="text" name="inputField"><br>
         <td><button onclick="takeInput()">Submit</button></td>
     </form> 
