--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script>
     function takeInput() {
         var inputText = document.getElementById("inputField").value;
+        alert(inputText);
     }
 </script>    
   </body>
