--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h1>Reader</h1>
-    <p>Enter text to increase readability.</p>
+    <p>Enter text</p>
     <form>
         <input type="text" name="inputField"><br>
         <td><button onclick="takeInput()">Submit</button></td>
