--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Enter text</p>
     <form>
         <input type="text" name="inputField"><br>
-        <button onclick="takeInput()">Submit</button>
+        <button onclick=takeInput()>Submit</button>
     </form> 
      
   </body>
