--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Reader</h1>
     <p>Enter text</p>
     <form>
-        <input type="text" name="inputField"><br>
+        <input type="text" id="inputField"><br>
         <button onclick=takeInput()>Submit</button>
     </form> 
      
