--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
   <body>
@@ -16,4 +17,26 @@
     </form> 
      
   </body>
+</html>
+-->
+<!DOCTYPE html>
+<html>
+
+<head>
+
+    <script>
+        var user_input = prompt("Please enter your text:", "");
+        if (user_input!= null) {
+            document.getElementById("input_text").innerHTML = user_input;
+        }
+    </script>
+
+</head>
+
+<body>
+
+    <div id="input_text">Text.</div>
+
+</body>
+
 </html>
