--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </body>
 </html>
 -->
+<!--
 <!DOCTYPE html>
 <html>
 
@@ -39,4 +40,31 @@
 
 </body>
 
+</html>
+-->
+
+<!DOCTYPE html>
+<html>
+
+<head>
+
+<script> 
+
+var customerName = prompt("Please enter your name", "");
+if (customerName!= null) {
+    document.getElementById("welcome").innerHTML =
+    "Hello " + customerName + "! How are you today?";
+}
+
+ 
+
+</script>
+
+</head>
+
+<body>
+
+<div id="welcome">My First JavaScript code.</div>
+
+</body>
 </html>
