--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
 <script> 
 
 var customerName = prompt("Please enter your name", "");
-if (customerName!= null) {
-    document.getElementById("welcome").innerHTML =
-    "Hello " + customerName + "! How are you today?";
+if (customerName != null) {
+    var foo = document.getElement('welcome');
+    foo.value = customerName;
 }
-
  
 
 </script>
