--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <script> 
 
-var customerName = prompt("Please enter your name", "");
+var customerName = prompt("Please enter your name!", "");
 if (customerName != null) {
     var foo = document.getElement('welcome');
     foo.value = customerName;
