--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 <html>
 <body>
 
-<div id="welcome">My First JavaScript code.</div>
+<div id="welcome">.</div>
 
 </body>
 <head>
 
 <script> 
 
-var customerName = prompt("Please enter your name!", "");
+var customerName = prompt("Please enter your text:", "");
 if (customerName != null) {
     var foo = document.getElement('welcome');
     foo.value = customerName;
@@ -64,6 +64,5 @@ if (customerName != null) {
 </script>
 
 </head>
-
 
 </html>
