--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>Reader</title>
 
     <body>
-        <div id="text">
-            .
-        </div>
+        <div id="text"></div>
     </body>
     <style>
         body {
