--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Reader</title>
 
     <body>
@@ -9,7 +11,7 @@
     </body>
     <style>
         body {
-            font-family: "Lucida Console", Monaco, monospace;
+            font-family: "Roboto Mono", "Courier New", monospace;
             background-color: #212121;
             font-size: large;
             text-indent: 50px;
